Add NuGet packages.

--- a/API.Rest/API.Rest.csproj
+++ b/API.Rest/API.Rest.csproj
@@ -7,7 +7,9 @@
     <RootNamespace>API.Rest</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <Content Include=".vscode\launch.json" />
+    <PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.0" />
   </ItemGroup>
 </Project>
