--- a/API.Rest/API.Rest.csproj
+++ b/API.Rest/API.Rest.csproj
@@ -5,12 +5,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>API.Rest</RootNamespace>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="DotNext.IO" Version="4.7.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
-    <Content Include=".vscode\launch.json" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
     <PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.0" />
+    <Content Include=".vscode\launch.json" />
   </ItemGroup>
 </Project>
