--- a/PMF.Invoice.Service.Tests/PMF.Invoice.Service.Tests.csproj
+++ b/PMF.Invoice.Service.Tests/PMF.Invoice.Service.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\API.Rest\API.Rest.csproj" />
+    <ProjectReference Include="..\PMF.Invoice.Service\PMF.Invoice.Service.csproj" />
   </ItemGroup>
 
 </Project>
