--- a/PMF.Invoice.Service/PMF.Invoice.Service.csproj
+++ b/PMF.Invoice.Service/PMF.Invoice.Service.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>API.Rest</RootNamespace>
+    <RootNamespace>PMF.Invoice.Service</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="CsvHelper" Version="30.0.1" />
     <PackageReference Include="DotNext.IO" Version="4.7.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
