--- a/PMF.Invoice.Service/PMF.Invoice.Service.csproj
+++ b/PMF.Invoice.Service/PMF.Invoice.Service.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -16,5 +16,6 @@
     <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.4.0" />
     <PackageReference Include="System.Security.Cryptography.Xml" Version="7.0.0" />
     <Content Include=".vscode\launch.json" />
+    <Content Include="Services\InvoiceService.cs" />
   </ItemGroup>
 </Project>
